# backend

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: test.yml
common/: permissions.py
config/: settings.py  urls.py
groups/: models.py  serializers.py  urls.py  views.py
groups/migrations/: 0001_initial.py  0002_group_capacity.py  0003_group_num_sessions.py  0004_groupfoodscore.py  0005_alter_groupfoodscore_options.py
groups/tests/: group_invite_tests.py  group_tests.py
recipes/: models.py  serializers.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_options_alter_step_options_and_more.py
recipes/tests/: ingredient_tests.py  recipe_tests.py  step_tests.py
restaurants/: models.py  serializers.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py  0002_alter_restaurant_options.py
restaurants/tests/: restaurant_tests.py
swipables/: apps.py  models.py  serializers.py  urls.py  views.py
swipables/migrations/: 0001_initial.py  0002_swipe.py  0003_alter_swipe_unique_together.py
swipables/tests/: swipable_tests.py  swipe_tests.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_image.py  0003_alter_user_image.py
users/tests/: user_tests.py
